# IniIO

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: ini_io.cpp  ini_io.h
testdata/: testIni_01.ini
tests/: ini_io_test.cpp
